--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.html
@@ -1,46 +1,36 @@
-
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="end" color="primary">
-      <ion-button slot="icon-only" (click)="closeThisModal()">
-        <ion-icon name="log-out"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
 <ion-content>
+  <div class="decoration">
+    <img src="assets/icon/logo.jpg">
+  </div>
   <div class="container">
     <form>
       <ion-card>
-        <div>
-            <ion-label>Ancien Password:</ion-label>
-            <div class="form-group">
-              <ion-input [(ngModel)]="oldPassword" type="password" name="oldPassword"></ion-input>
-            </div>
-          </div>
-          <div>
-            <ion-label>Nouveau Password :</ion-label> 
-            <div class="form-group">
+        <ion-card-header>
+          <ion-card-title>
+            Changer le Mot de Passe
+          </ion-card-title>
+          <ion-card-subtitle>vous allez proceder au renouvellement de votre mot de passe</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-item lines="none">
+            <ion-label position="floating">Ancien Mot de Passe</ion-label>
+            <ion-input [(ngModel)]="oldPassword" type="password" name="oldPassword"></ion-input>
+          </ion-item>
+
+          <ion-item lines="none">
+            <ion-label position="floating">Nouveau Mot de passe</ion-label>
               <ion-input [(ngModel)]="newPassword" type="password" name="newPassword"></ion-input>
-            </div>
-            
-          </div>
-          <div>
-            <ion-label>Retapez le Password :</ion-label>
-            <div class="form-group">
+          </ion-item>
+          <ion-item lines="none">
+              <ion-label position="floating">Retapez Mot de Passe</ion-label>
               <ion-input [(ngModel)]="newcPassword" type="password" name="newcPassword" placeholder=""></ion-input>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <div class="button" (click)="cancelThisOpeartion()">Annuler</div>
-            </div>
-            <div>
-              <div class="button" (click)="modifiedPasswor()">Sauvegarder</div>
-            </div>
-          </div>
+          </ion-item>
+          <ion-buttons class="action-button-block">
+            <ion-button id="annuler" class="button" (click)="cancelThisOpeartion()">Annuler</ion-button>
+            <ion-button class="button" (click)="modifiedPasswor()">Sauvegarder</ion-button>
+          </ion-buttons>
+        </ion-card-content>
       </ion-card>
-        
     </form>
   </div>
 </ion-content>
