--- a/src/app/VIEWS/PAGES/BASES/menu/menu.page.css
+++ b/src/app/VIEWS/PAGES/BASES/menu/menu.page.css
@@ -6,6 +6,7 @@ ion-split-pane ion-menu .container-lateral-menu {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 ion-split-pane ion-menu .container-lateral-menu .header-info {
   display: flex;
@@ -48,25 +49,51 @@ ion-split-pane ion-menu .container-lateral-menu .header-info .infoUser .email {
   font-family: raleway;
   font-size: 0.7rem;
 }
-.contentInformation {
+ion-split-pane ion-menu .container-lateral-menu .content-info {
   width: 100%;
-  padding-top: 30px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.contentInformation ion-avatar {
-  border: 4px solid #ffd31a;
+ion-split-pane ion-menu .container-lateral-menu .content-info ion-list {
+  width: 100%;
+  background: transparent;
+  padding-top: 0;
 }
-ion-list {
-  height: 100%;
+ion-split-pane
+  ion-menu
+  .container-lateral-menu
+  .content-info
+  ion-list
+  ion-list-header {
+  background: #2f2e2e;
+  color: #989595;
+  font-size: 11px;
+  min-height: 30px;
+  font-family: Lato;
+  font-weight: lighter;
+  border-left: 3px solid #f96807;
 }
-ion-list #desconnect {
-  position: fixed;
-  bottom: 0;
+ion-split-pane
+  ion-menu
+  .container-lateral-menu
+  .content-info
+  ion-list
+  ion-item {
+  --background: transparent;
+  color: white;
+  font-family: raleway;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 10px;
 }
-.menu-item {
-  width: 1rem;
-  height: 1rem;
+ion-split-pane
+  ion-menu
+  .container-lateral-menu
+  .content-info
+  ion-list
+  ion-item
+  ion-icon {
+  color: #f96807;
+  margin-inline-end: 10px;
 }
