--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.css
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.css
@@ -1,24 +1,54 @@
 ion-content {
   background: transparent;
+  position: relative;
 }
-.container {
+ion-content .decoration {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+}
+ion-content .decoration img {
+  object-fit: cover;
+  height: 100%;
+  filter: blur(8px);
+}
+ion-content .container {
+  position: absolute;
+  z-index: 2;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: #3e3636;
 }
-.container ion-card {
-  padding-bottom: 10px;
+ion-content .container form {
+  width: 100%;
 }
-.container ion-card ion-buttons {
+ion-content .container form ion-card {
+  width: 100%;
+  margin: 5px;
+  box-shadow: none;
+}
+ion-content .container form ion-card ion-card-header ion-card-title {
+  font-size: 2rem;
+}
+ion-content .container form ion-card ion-card-content ion-item {
+  border-bottom: 1px sold red;
+}
+ion-content .container form ion-card ion-buttons {
   width: 100%;
   justify-content: center;
 }
-.container ion-card ion-buttons ion-button {
-  width: 10rem;
-  background: darkcyan;
+ion-content .container form ion-card ion-buttons ion-button {
   color: white;
   font-family: Lato;
+  width: 45%;
+  background: blue;
+  border-radius: 25px !important;
+  border: 1px solid brown;
 }
