--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.scss
@@ -1,37 +1,91 @@
 
 ion-content {
     background: transparent;
-}
-
-.container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    ion-card {
-        padding: 2rem;
+    position: relative;
+    .decoration {
+        top: 0;
+        left: 0;
         width: 100%;
-        ion-buttons {
+        height: 100%;
+        z-index: 1;
+        position: absolute;
+        img {
+            object-fit: cover;
+            height: 100%;
+            filter: blur(8px);
+        }
+    }
+    .container {
+        position: absolute;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #3e3636bb;
+        form {
             width: 100%;
+            display: flex;
+            flex-direction: column;
             justify-content: center;
-            ion-button {
-                
-                background: darkcyan;
-                color: white;
-                font-family: Lato;
+            align-items: center;
+            ion-card {
+                width: 95%;
+                margin: 5px;
+                border: 1px solid white;
+                border-radius: 10px;
+                background:#3e363696;
+                // box-shadow: none;
+                ion-card-header {
+                    ion-card-title {
+                        font-size: 1.4rem;
+                        font-family: raleway;
+                        color: white;
+                        font-weight: 200;
+                        text-align: center;
+                    }
+                    ion-card-subtitle {
+                        text-align: center;
+                        font-size: 1rem;
+                        color: #0cd1e8;
+                    }
+                }
+                ion-card-content {
+                    justify-content: center;
+                    align-items: center;
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    ion-item {
+                        border-bottom: 0.1px solid white;
+                        --background: transparent;
+                        font-family: "raleway";
+                        font-size: 1.2rem;
+                        color: white;
+                        width: 92%;
+                    }
+                }
+                ion-buttons {
+                    width: 100%;
+                    justify-content: center;
+                    margin-top: 4%;
+                    ion-button {
+                        color: white;
+                        font-family: Lato;
+                        width: 45%;
+                        background: #f96807;
+                        border-radius: 25px!important;
+                        border: 1px solid brown;
+                    }
+                    #annuler {
+                        background: rgb(226, 226, 226);
+                        color: darkcyan;
+                    }
+                }
             }
         }
-        padding-bottom: 10px;
     }
-.button{
-    background: darkcyan;
-    border-radius: 5px;
-    padding: 0.7rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
-    font-size: 0.8rem;
-    cursor: pointer;
 }
-}
+
