--- a/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/change-pin/change-pin.page.scss
@@ -85,6 +85,7 @@ ion-content {
                     font-family: Lato;
                     text-transform: uppercase;
                     margin: 0.2rem;
+                    cursor: pointer;
                     border-radius: 50%;
                     background: #8e89894f;
                 }
