--- a/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
+++ b/src/app/VIEWS/PAGES/LOGGED/pin/pin.page.scss
@@ -82,8 +82,24 @@ ion-content {
                     text-transform: uppercase;
                     margin: 0.2rem;
                     border-radius: 50%;
+                    cursor: pointer;
                     background: #8e89894f;
                 }
+            }
+        }
+        .button-action {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            ion-button {
+                width: 10rem;
+                --background: transparent;
+                --box-shadow: none;
+                font-family: raleway;
+                font-weight: lighter;
+                font-size: 0.8rem;
             }
         }
     }
