--- a/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.html
+++ b/src/app/VIEWS/PAGES/METIERS/consomation/consomation.page.html
@@ -88,16 +88,19 @@
         <div class="image-file">
           <img *ngIf="imagePompe" [src]="imagePompe"/>
         </div>
+        <ion-input name="imagePompe" type="" [(ngModel)]="imagePompe"></ion-input>
+        <ion-input name="imagePompe" type="file" [(ngModel)]="imagePompe"></ion-input>
       </div>
       <ion-buttons class="action-button-block">
         <ion-button *ngIf="!canValidateOperation"
                     [disabled]="!consumptForm.valid"
                     (click)="selectImage()">AJOUTER PHOTO</ion-button>
-        <ion-button id="annuler" *ngIf="canValidateOperation"
+        <ion-button id="annuler" 
+                    *ngIf="canValidateOperation"
                     [disabled]="!consumptForm.valid"
                     (click)="selectImage()">Annuler</ion-button>
         <ion-button *ngIf="canValidateOperation" (click)="processStoreConsomation()">VALIDER</ion-button>
-      </ion-buttons>
+    </ion-buttons>
     </form>
   </div>
 </ion-content>
