--- a/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.html
+++ b/src/app/VIEWS/PAGES/LOGGED/modif-password/modif-password.page.html
@@ -13,17 +13,17 @@
         </ion-card-header>
         <ion-card-content>
           <ion-item lines="none">
-            <ion-label position="floating">Ancien Mot de Passe</ion-label>
+            <ion-label position="floating">Ancien mot de Passe</ion-label>
             <ion-input [(ngModel)]="oldPassword" type="password" name="oldPassword"></ion-input>
           </ion-item>
 
           <ion-item lines="none">
-            <ion-label position="floating">Nouveau Mot de passe</ion-label>
+            <ion-label position="floating">Nouveau mot de passe</ion-label>
               <ion-input [(ngModel)]="newPassword" type="password" name="newPassword"></ion-input>
           </ion-item>
           <ion-item lines="none">
-              <ion-label position="floating">Retapez Mot de Passe</ion-label>
-              <ion-input [(ngModel)]="newcPassword" type="password" name="newcPassword" placeholder=""></ion-input>
+              <ion-label position="floating">Confirmez mot de Passe</ion-label>
+              <ion-input [(ngModel)]="newcPassword" type="password" name="newcPassword"></ion-input>
           </ion-item>
           <ion-buttons class="action-button-block">
             <ion-button id="annuler" class="button" (click)="cancelThisOpeartion()">Annuler</ion-button>
