--- a/src/app/VIEWS/PAGES/METIERS/distribution/distribution.page.html
+++ b/src/app/VIEWS/PAGES/METIERS/distribution/distribution.page.html
@@ -119,20 +119,16 @@
               </div>
           <div class="row-line">
             <div class="title-row">Image</div>
-            <div class="image-file">
+            <div  class="image-file" id="imageBlock">
               <img *ngIf="imagePompe" [src]="imagePompe"/>
             </div>
-            <ion-input name="imagePompe" type="" [(ngModel)]="imagePompe"></ion-input>
-            <ion-input name="imagePompe" type="file" [(ngModel)]="imagePompe"></ion-input>
+            <ion-button id="buttonImage" (click)="addPhotoNow()">Ajouter Photo</ion-button>
           </div>
           <ion-buttons class="action-button-block">
-              <ion-button *ngIf="!canValidateOperation"
-                          [disabled]="!consumptForm.valid"
-                          (click)="selectImage()">AJOUTER PHOTO</ion-button>
               <ion-button id="annuler" 
                           *ngIf="canValidateOperation"
                           [disabled]="!consumptForm.valid"
-                          (click)="selectImage()">Annuler</ion-button>
+                          (click)="cancelProcess()">Annuler</ion-button>
               <ion-button *ngIf="canValidateOperation" (click)="processStoreConsomation()">VALIDER</ion-button>
           </ion-buttons>
       </form>
