--- a/src/app/VIEWS/PAGES/METIERS/distribution/distribution.page.scss
+++ b/src/app/VIEWS/PAGES/METIERS/distribution/distribution.page.scss
@@ -9,10 +9,11 @@ ion-content {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 53px);
     padding: 0.5rem;
     position: relative;
     padding-top: 30px;
+    overflow: scroll;
     .title-page {
         position: fixed;
         top: 40px;
@@ -66,6 +67,37 @@ ion-content {
                 }
                 
             }
+
+            .autocomplete {
+                width: 100%;
+            
+                ion-searchbar {
+                    padding: 1px !important;
+                }
+            
+                ion-list {
+                    position: absolute;
+                    width: inherit;
+                    overflow-y: scroll;
+                    max-height: 150%;
+                    z-index: 999;
+            
+                    ion-item {
+            
+                        img {
+                            max-height: 2.5rem;
+                            width: auto;
+                            margin: auto;
+                            display: block;
+                        }
+                    }
+            
+                    ion-item:hover {
+                        cursor: pointer;
+                        background: #f1f1f1
+                    }
+                }
+            }
         }
 
         ion-buttons {
@@ -96,13 +128,4 @@ ion-content {
         }
     }
 
-    ion-button {
-        color: white;
-        font-family: Lato;
-        width: 45%;
-        background: #f96807;
-        border-radius: 25px!important;
-        border: 1px solid brown;
-    }
-    
 }
